# TurboVis

./: .gitignore  CMakeLists.txt  README.md  snippets.txt
assets/: c0.txt  read_k.py  simulation_results_phi100.hdf5  simulation_results_phi121.hdf5
cmake/PackageConfigTemplates/: sciplotConfig.cmake.in
example_files/: cam.json  cam_exp.json  config.json  config_r.json  config_s.json  simulation_results_phi.hdf5  simulation_results_phi412.hdf5
include/: AsyncRenderer.hpp  allocator.hpp  asyncrenderer.hpp  asyncrenderer_lockfree.hpp  bench.hpp  camera.hpp  data.hpp  defines.hpp  depthbuffervisualizer.hpp  exception.hpp  filepathresolver.hpp  gl.hpp  gui.hpp  hagedornfunction.hpp  hagedornrenderer.hpp  hdf5.hpp  math.hpp  shaderprogram.hpp  state.hpp  tb_gui.h  util.hpp
module/TurboDorn/: module.cmake
module/TurboDorn/include/TurboDorn/: bresenham.hpp  griderator.hpp  hdf5.hpp  turbodorn.hpp  voxeliser.hpp
module/TurboDorn/tests/: test_turbodorn.cpp
python/: filename.txt  phaseplot.py  read_hdf5.py  simulation_results.hdf5  simulation_results_phi000.hdf5
shader/: hagedorn.frag  naive.frag  shader.frag  shader.vert  shape.comp  shape.frag  shape2.frag  shape_sdf.frag  shape_sdf.vert
src/: camera.cpp  camera_tool.cpp  data.cpp  gl.cpp  gui.cpp  main.cpp  maingl.cpp  math.cpp  state.cpp  util.cpp
tests/: main.cpp
tests/PCA_STATIC/: main.cpp
tests/SHAPES/: main.cpp
tests/VPM/: main.cpp
tests/VQ/: main.cpp
tools/: hdf5_to_json.py
